--- a/Dinamic V3/test-output/old/Default suite/methods-alphabetical.html
+++ b/Dinamic V3/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="889b97">  <td>22/12/12 16:37:58</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;Registration.close()[pri:0, instance:com.dinamic.v3.test.tescases.Registration@6392827e]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@914507705</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/12 16:37:58</td>   <td>-27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Registration.registration()[pri:5, instance:com.dinamic.v3.test.tescases.Registration@6392827e]">registration</td> 
-  <td>main@914507705</td>   <td></td> </tr>
-<tr bgcolor="889b97">  <td>22/12/12 16:37:54</td>   <td>-4362</td> <td>&nbsp;</td><td title="&gt;&gt;Registration.start()[pri:0, instance:com.dinamic.v3.test.tescases.Registration@6392827e]">&gt;&gt;start</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@914507705</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/12 16:55:10</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;OrdersTestCase.browserConfiguration()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">&gt;&gt;browserConfiguration</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@121167003</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/12 16:56:23</td>   <td>72491</td> <td>&nbsp;</td><td title="&lt;&lt;OrdersTestCase.close()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@121167003</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/12 16:55:14</td>   <td>4065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.log()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">log</td> 
+  <td>main@121167003</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/12 16:56:19</td>   <td>69096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.logout()[pri:4, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">logout</td> 
+  <td>main@121167003</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/12 16:55:14</td>   <td>4411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.ordersEntry()[pri:1, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">ordersEntry</td> 
+  <td>main@121167003</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/12 16:55:35</td>   <td>24506</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.withItemDiscount()[pri:3, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">withItemDiscount</td> 
+  <td>main@121167003</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/12 16:55:21</td>   <td>10455</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.withoutItemDiscountPrice()[pri:2, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">withoutItemDiscountPrice</td> 
+  <td>main@121167003</td>   <td></td> </tr>
 </table>
